...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.xp4.hobit.EditProfileHobbiesActivity">


    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_1"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_2"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_3"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_4"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_5"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_6"
        app:layout_constraintBottom_toTopOf="@+id/checkBox7"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_7"
        app:layout_constraintBottom_toTopOf="@+id/checkBox8"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_8"
        app:layout_constraintBottom_toTopOf="@+id/checkBox9"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_9"
        app:layout_constraintBottom_toTopOf="@+id/checkBox10"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginLeft="16dp"
        android:text="@string/hobby_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:text="@string/hobby_11"
        app:layout_constraintBottom_toTopOf="@+id/checkBox12"
        app:layout_constraintLeft_toRightOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="105dp"
        android:text="@string/hobby_12"
        app:layout_constraintBottom_toTopOf="@+id/checkBox13"
        app:layout_constraintLeft_toRightOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="92dp"
        android:text="@string/hobby_13"
        app:layout_constraintBottom_toTopOf="@+id/checkBox14"
        app:layout_constraintLeft_toRightOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="109dp"
        android:text="@string/hobby_14"
        app:layout_constraintBottom_toTopOf="@+id/checkBox15"
        app:layout_constraintLeft_toRightOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="111dp"
        android:text="@string/hobby_15"
        app:layout_constraintBottom_toTopOf="@+id/checkBox16"
        app:layout_constraintLeft_toRightOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="103dp"
        android:text="@string/hobby_16"
        app:layout_constraintBottom_toTopOf="@+id/checkBox17"
        app:layout_constraintLeft_toRightOf="@+id/checkBox6" />

    <CheckBox
        android:id="@+id/checkBox17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="5dp"
        android:text="@string/hobby_17"
        app:layout_constraintBottom_toTopOf="@+id/checkBox18"
        app:layout_constraintLeft_toRightOf="@+id/checkBox7" />

    <CheckBox
        android:id="@+id/checkBox18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="12dp"
        android:text="@string/hobby_18"
        app:layout_constraintBottom_toTopOf="@+id/checkBox19"
        app:layout_constraintLeft_toRightOf="@+id/checkBox8" />

    <CheckBox
        android:id="@+id/checkBox19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="103dp"
        android:text="@string/hobby_19"
        app:layout_constraintBottom_toTopOf="@+id/cont_button"
        app:layout_constraintLeft_toRightOf="@+id/checkBox9" />

    <Button
        android:id="@+id/cont_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
