<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.sw2017.xp4.hobit.HobIT_Main"
    tools:showIn="@layout/app_bar_hob_it__main">

...
        android:text="HELLO THIS IS THE HOBBIE APP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <ListView
        android:id="@+id/ListViewGroups"
        android:layout_width="352dp"
        android:layout_height="377dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="57dp"
        app:layout_constraintLeft_toLeftOf="parent"
...
